---------------------------------------------------------------------------------------------------
Version: 4.0.0
Date: ??????
  Features:
    - Removed many scripts to their own mods.
    - Added Recipe Group/Subgroup toggles.
  Changes:
    - Wire-stripper is now a tool in the blueprint library.
    - Changed the keybind for renamer.
---------------------------------------------------------------------------------------------------
Version: 3.0.4
Date: ??????
  Features:
    - Character Modifiers are restored when respawning.
    - Added Naked Rails. (assimilated Naked Rails mod).
    - Added Add empty blueprint to book hotkey. (linked to terrain size increase) will add and select an empty bp to the current book.
    - Added Remove empty blueprints from book. (linked to terrain size decrease) will remove all empty blueprints from the current book.
    - Added blueprint edge snapping (From Blueprint Extensions by Dewin).
    - Added blueprint updater (From Blueprint Extensions by Dewin).
    - Added picker cheat recipes
    - Filter Fill now works on the player inventory.
    - Train Goto next station hotkey added.
    - Player inventory can be manually sorted.
    - Honking can attract enemies (defaults to off).
    - Train horns are configurable.
  Enhancements:
    - Beltbrushs can be created from pipette blueprints of belts.
    - Pipette and Beltbrush blueprints are always cleaned from inventory.
    - Zapper always deletes blueprints you place in trash slots (add bps to autotrash to always trash em).
    - Selection tools, Blueprints, Blueprint Books, and Deconstruction items are hidden by default.
    - Changed the way notes are saved. Existing notes will get destroyed or lost.
    - Sort Inventory now uses sort_and_merge inventory method.
  Bugfixes:
    - Fix missing locale for equipment hotkeys.
    - Fix small logic bug in lib.
    - Allow specifying train horn.
    - Include changelog in release. #68