@@ -22,6 +22,7 @@ picker-chat-color=Chat Color
 picker-character-color=Character Color
 picker-use-groups=Use Item Groups
 picker-use-subgroups=Use Item Subgroups
+picker-fix-trash-filters=Sync trash filters with logistics
 
 [mod-setting-description]
 picker-item-zapper=Space seperated list of item names that will be zapped into the nether when dropping them with __CONTROL__drop-cursor__ key.
@@ -48,3 +49,4 @@ picker-chat-color=Default chat color when making a new player.
 picker-character-color=Default character color when making a new player.
 picker-use-groups=Use Item Groups when selecting recipes, items or filters.
 picker-use-subgroups=Use Item Subgroups when selecting recipes, items or filters.
+picker-fix-trash-filters=Sync trash filters with logistics when inventory is opened.
