@@ -4,6 +4,8 @@ Date: ??????
   Features:
     - Removed many scripts to their own mods.
     - Added Recipe Group/Subgroup toggles.
+    - Added Auto trash fix.
+    - Character Modifiers are restored when respawning.
   Changes:
     - Wire-stripper is now a tool in the blueprint library.
     - Changed the keybind for renamer.
@@ -11,7 +13,6 @@ Date: ??????
 Version: 3.0.4
 Date: ??????
   Features:
-    - Character Modifiers are restored when respawning.
     - Added Naked Rails. (assimilated Naked Rails mod).
     - Added Add empty blueprint to book hotkey. (linked to terrain size increase) will add and select an empty bp to the current book.
     - Added Remove empty blueprints from book. (linked to terrain size decrease) will remove all empty blueprints from the current book.
